2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add dirstamp support to preinstallation.
	* clock/Makefile.am: Cosmetics.
	* console/Makefile.am: Cosmetics.
	* gnatsupp/Makefile.am: Cosmetics.
	* leon_open_eth/Makefile.am: Correct paths to automake/*.am..
	* startup/Makefile.am: Cosmetics.
	* timer/Makefile.am: Cosmetics.
	* wrapup/Makefile.am: Cosmetics.

	PR 538/bsps:
	* wrapup/Makefile.am: Add leon_open_eth.rel

2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Remove all-local: $(ARCH).
	* console/Makefile.am: Remove all-local: $(ARCH).
	* gnatsupp/Makefile.am: Remove all-local: $(ARCH).
	* leon_open_eth/Makefile.am: Remove all-local: $(ARCH).
	* start/Makefile.am: Remove all-local: $(ARCH).
	* startup/Makefile.am: Remove all-local: $(ARCH).
	* timer/Makefile.am: Remove all-local: $(ARCH).
	* wrapup/Makefile.am: Remove all-local: $(ARCH).

2003-10-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Fix preinstallation of include/coverhd.h.

2003-09-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in include/Makefile.am.
	Reflect changes to bsp.am.
	* include/Makefile.am: Remove.
	* configure.ac: Reflect changes above.

2003-09-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bsp_specs: Remove *lib:.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* clock/ckinit.c, console/console.c, console/consolereserveresources.c,
	console/debugputs.c, include/bsp.h, include/coverhd.h,
	include/leon.h, startup/setvec.c, timer/timer.c: URL for license
	changed.

2003-09-03	Jiri Gaisler <jiri@gaisler.com>

	PR 477/networking
	* Makefile.am, configure.ac, console/console.c, include/bsp.h,
	startup/setvec.c, wrapup/Makefile.am: Add network support and enable
	custom power down.
	* leon_open_eth/.cvsignore, leon_open_eth/Makefile.am,
	leon_open_eth/leon_open_eth.c: New files.

2003-08-20	Joel Sherrill <joel@OARcorp.com>

	* include/bsp.h: Correct copyright statements.
